Changes for 4.0.0alpha7

New features:
..F....... [ZBXNEXT-4528] added link to Zabbix official support page (Andzs, ashubin)
........S. [ZBXNEXT-4520] added values to boolean mapping: "ok, master" as 1 and "err, slave" as 0 (viktors)
..F....... [ZBXNEXT-4185] added support of multiple items in "Plain text" widget (ashubin)

Bug fixes:
........S. [ZBX-12390] fixed problem when triggers might not use correct value if an item values within one second were received in wrong historical order (wiper)
.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
..F....... [ZBX-14337] fixed persistent xss in map navigation tree widget (vjaceslavs)
..F....... [ZBX-14336] fixed persistent xss vulnerability in services (vjaceslavs)
........S. [ZBX-14313] fixed trigger level correlation when multiple tags are set (wiper)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha6

New features:
..F....... [ZBXNEXT-4415] added new mode "Compact view" to the Problems page with ability to toggle highlighting whole row; added option to toggle timeline (agriscenko, Andzs)
A.F.....S. [ZBXNEXT-2788] added support "NOT" keyword in custom expression fields (Ivo, Sergejs)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "System status" to "Problems by severity" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "Host status" to "Problem hosts" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget, screen element and report "Status of Zabbix" to "System information" (Sasha)
....IJ.... [ZBX-13376] moved functionality to enable JMX interface in Java gateway to settings.sh and ensured setting TCP timeout (dimir)
A....J.... [ZBXNEXT-4458] improved logging of Java gateway, added username/password validation for JMX items (vjaceslavs)
A.F.I..PS. [ZBXNEXT-4411] added compression of server-proxy data exchange (miks, wiper)